# cargo-apk2

./: Cargo.toml  README-ZH.md  README.md
.codebuddy/.rules/: ProjectRule.mdc
.github/workflows/: android_test.sh  publish.yml  rust.yml
cargo-apk2/: CHANGELOG.md  Cargo.toml  README-ZH.md  README.md
cargo-apk2/src/: apk.rs  error.rs  main.rs  manifest.rs
egui-examples/: Cargo.toml
egui-examples/src/: lib.rs
groovy-examples/: Cargo.toml
groovy-examples/src/: lib.rs
groovy-examples/src/groovy/com/example/app/: MainActivity.groovy  MyService.groovy
java-examples/: Cargo.toml
java-examples/src/: lib.rs
java-examples/src/java/com/example/app/: MainActivity.java  MyService.java
kotlin-examples/: Cargo.toml
kotlin-examples/src/kotlin/com/example/app/: MainActivity.kt  MyService.kt
ndk-build2/: CHANGELOG.md  Cargo.toml  README.md
ndk-build2/src/: apk.rs  cargo.rs  dylibs.rs  error.rs  manifest.rs  ndk.rs  readelf.rs  target.rs
ndk-examples/: Cargo.toml  README-ZH.md  README.md
ndk-examples/examples/: hello_world.rs  jni_audio.rs  looper.rs
ndk-examples/src/: hello_world.rs  jni_audio.rs  lib.rs  looper.rs
scala-examples/: Cargo.toml
scala-examples/src/: lib.rs
scala-examples/src/scala/com/example/app/: MainActivity.scala  MyService.scala
