[workspace.package]
version = "1.3.6"
authors = [
    "SmileSky <mzdk100@foxmail.com>",
    "The Rust Windowing contributors",
]
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk", "apk"]
repository = "https://github.com/mzdk100/cargo-apk2.git"
rust-version = "1.90.0"

[workspace.dependencies]
android-build = { version = "0.1.3", default-features = false }
android_logger = "0.15.1"
anyhow = "1.0.101"
cargo-subcommand = "0.12.0"
clap = "4.5.58"
dirs = "6.0.0"
dunce = "1.0.5"
eframe = "0.33.3"
env_logger = "0.11.9"
jni = "0.21.1"
libc = "1.0.0-alpha.3"
log = "0.4.29"
ndk = "0.9.0"
ndk-context = "0.1.1"
quick-xml = "0.39.1"
serde = "1.0.228"
thiserror = "2.0.18"
toml = "1.0.1+spec-1.1.0"
which = "8.0.0"
winit = "0.31.0-beta.2"

[workspace]
members = [
    "egui-examples",
    "groovy-examples",
    "java-examples",
    "kotlin-examples",
    "scala-examples",
    "ndk-build2",
    "ndk-examples",
    "cargo-apk2",
]
resolver = "3"
