[package]
name = "cargo-apk2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Rust轻松构建安卓应用的Cargo扩展"
license.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.93"
cargo-subcommand = "0.12.0"
dunce.workspace = true
env_logger = "0.11.5"
log = "0.4.22"
serde.workspace = true
thiserror.workspace = true
toml = "0.8.19"

[dependencies.ndk-build2]
path = "../ndk-build2"
version = "1.0.3"

[dependencies.clap]
version = "4.5.20"
features = ["derive"]
