[package]
name = "cargo-apk2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Rust轻松构建安卓应用的Cargo扩展"
license.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
android-build.workspace = true
anyhow.workspace = true
cargo-subcommand.workspace = true
dunce.workspace = true
env_logger.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dependencies.ndk-build2]
path = "../ndk-build2"
version = "1.2.1"

[dependencies.clap]
workspace = true
features = ["derive"]
