[package]
name = "egui-examples"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger.workspace = true
eframe.workspace = true
log.workspace = true
winit = {workspace = true, features = ["android-native-activity"]}

[package.metadata.android.sdk]
min_sdk_version = 29
target_sdk_version = 36

# This needs to be turned on for cargo apk2.
[package.metadata.android.application]
# needed
has_code = false

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"

[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW", "android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]
