[package]
name = "groovy-examples"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]

[package.metadata.android]
use_aapt2 = true
package = "com.example.app"
groovy_sources = "src/groovy"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 36

[[package.metadata.android.application.activity]]
name = ".MainActivity"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW", "android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[[package.metadata.android.application.service]]
name = ".MyService"
enabled = true
