[package]
name = "ndk-build2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "用于构建 Android 二进制文件的实用程序"
license.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
android-build = "0.1.0"
dirs = "5.0.1"
dunce.workspace = true
thiserror.workspace = true
which = "7.0.0"

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.quick-xml]
version = "0.37.0"
features = ["serialize"]
