[package]
name = "ndk-build2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "用于构建 Android 二进制文件的实用程序"
license.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
android-build.workspace = true
dirs.workspace = true
dunce.workspace = true
thiserror.workspace = true
which.workspace = true

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.quick-xml]
workspace = true
features = ["serialize"]
