[package]
name = "ndk-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
libc.workspace = true
log.workspace = true
ndk-context.workspace = true
android_logger.workspace = true

[target.'cfg(target_os = "android")'.dependencies.android-activity]
workspace = true
features = ["native-activity"]

[target.'cfg(target_os = "android")'.dependencies.ndk]
workspace = true
features = ["api-level-24"]

[[example]]
name = "hello_world"
crate-type = ["cdylib"]

[[example]]
name = "jni_audio"
crate-type = ["cdylib"]

[[example]]
name = "looper"
crate-type = ["cdylib"]

[package.metadata.android]
use_aapt2 = true

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 36
