[package]
name = "ndk-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
android-activity = {workspace = true, features = ["native-activity"]}
android_logger.workspace = true
log.workspace = true

[dependencies.ndk-context]
workspace = true
optional = true

[dependencies.jni]
workspace = true
optional = true

[dependencies.ndk]
workspace = true
optional = true

[dependencies.libc]
optional = true
workspace = true

[features]
hello_world = ["ndk/api-level-33"]
jni_audio = ["jni", "ndk-context"]
looper = ["ndk/api-level-33", "libc"]

[package.metadata.android]
use_aapt2 = true

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 36

[package.metadata.android.application]
# needed
has_code = false

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"

[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "ndk_examples"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW", "android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]
